qt/gen_qwizard.h

typedef struct QActionEvent QActionEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
bool QWizardPage_override_virtual_validatePage(void* self, intptr_t slot);
bool QWizardPage_virtualbase_validatePage(void* self);
bool QWizardPage_override_virtual_isComplete(void* self, intptr_t slot);
bool QWizardPage_virtualbase_isComplete(const void* self);
bool QWizardPage_override_virtual_nextId(void* self, intptr_t slot);
int QWizardPage_virtualbase_nextId(const void* self);
bool QWizardPage_override_virtual_devType(void* self, intptr_t slot);
int QWizardPage_virtualbase_devType(const void* self);
bool QWizardPage_override_virtual_setVisible(void* self, intptr_t slot);
void QWizardPage_virtualbase_setVisible(void* self, bool visible);
bool QWizardPage_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QWizardPage_virtualbase_sizeHint(const void* self);
bool QWizardPage_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QWizardPage_virtualbase_minimumSizeHint(const void* self);
bool QWizardPage_override_virtual_heightForWidth(void* self, intptr_t slot);
int QWizardPage_virtualbase_heightForWidth(const void* self, int param1);
bool QWizardPage_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QWizardPage_virtualbase_hasHeightForWidth(const void* self);
bool QWizardPage_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QWizardPage_virtualbase_paintEngine(const void* self);
bool QWizardPage_override_virtual_event(void* self, intptr_t slot);
bool QWizardPage_virtualbase_event(void* self, QEvent* event);
bool QWizardPage_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QWizardPage_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QWizardPage_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QWizardPage_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QWizardPage_override_virtual_wheelEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QWizardPage_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QWizardPage_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QWizardPage_override_virtual_focusInEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QWizardPage_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QWizardPage_override_virtual_enterEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_enterEvent(void* self, QEvent* event);
bool QWizardPage_override_virtual_leaveEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_leaveEvent(void* self, QEvent* event);
bool QWizardPage_override_virtual_paintEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_paintEvent(void* self, QPaintEvent* event);
bool QWizardPage_override_virtual_moveEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QWizardPage_override_virtual_resizeEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QWizardPage_override_virtual_closeEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QWizardPage_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* event);
bool QWizardPage_override_virtual_tabletEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QWizardPage_override_virtual_actionEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QWizardPage_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QWizardPage_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QWizardPage_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QWizardPage_override_virtual_dropEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QWizardPage_override_virtual_showEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_showEvent(void* self, QShowEvent* event);
bool QWizardPage_override_virtual_hideEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QWizardPage_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QWizardPage_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
bool QWizardPage_override_virtual_changeEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_changeEvent(void* self, QEvent* param1);
bool QWizardPage_override_virtual_metric(void* self, intptr_t slot);
int QWizardPage_virtualbase_metric(const void* self, int param1);
bool QWizardPage_override_virtual_initPainter(void* self, intptr_t slot);
void QWizardPage_virtualbase_initPainter(const void* self, QPainter* painter);
bool QWizardPage_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QWizardPage_virtualbase_redirected(const void* self, QPoint* offset);
bool QWizardPage_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QWizardPage_virtualbase_sharedPainter(const void* self);
bool QWizardPage_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QWizardPage_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QWizardPage_virtualbase_inputMethodQuery(const void* self, int param1);
bool QWizardPage_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QWizardPage_virtualbase_focusNextPrevChild(void* self, bool next);
bool QWizardPage_override_virtual_eventFilter(void* self, intptr_t slot);
bool QWizardPage_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
void QWizardPage_virtualbase_timerEvent(void* self, QTimerEvent* event);