qt/gen_qwizard.nim

proc fQWizardPage_virtualbase_validatePage(self: pointer, ): bool{.importc: "QWizardPage_virtualbase_validatePage".}
proc fcQWizardPage_override_virtual_validatePage(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_validatePage".}
proc fQWizardPage_virtualbase_isComplete(self: pointer, ): bool{.importc: "QWizardPage_virtualbase_isComplete".}
proc fcQWizardPage_override_virtual_isComplete(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_isComplete".}
proc fQWizardPage_virtualbase_nextId(self: pointer, ): cint{.importc: "QWizardPage_virtualbase_nextId".}
proc fcQWizardPage_override_virtual_nextId(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_nextId".}
proc fQWizardPage_virtualbase_devType(self: pointer, ): cint{.importc: "QWizardPage_virtualbase_devType".}
proc fcQWizardPage_override_virtual_devType(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_devType".}
proc fQWizardPage_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QWizardPage_virtualbase_setVisible".}
proc fcQWizardPage_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_setVisible".}
proc fQWizardPage_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QWizardPage_virtualbase_sizeHint".}
proc fcQWizardPage_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_sizeHint".}
proc fQWizardPage_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QWizardPage_virtualbase_minimumSizeHint".}
proc fcQWizardPage_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_minimumSizeHint".}
proc fQWizardPage_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QWizardPage_virtualbase_heightForWidth".}
proc fcQWizardPage_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_heightForWidth".}
proc fQWizardPage_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QWizardPage_virtualbase_hasHeightForWidth".}
proc fcQWizardPage_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_hasHeightForWidth".}
proc fQWizardPage_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QWizardPage_virtualbase_paintEngine".}
proc fcQWizardPage_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_paintEngine".}
proc fQWizardPage_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QWizardPage_virtualbase_event".}
proc fcQWizardPage_override_virtual_event(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_event".}
proc fQWizardPage_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_mousePressEvent".}
proc fcQWizardPage_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_mousePressEvent".}
proc fQWizardPage_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_mouseReleaseEvent".}
proc fcQWizardPage_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_mouseReleaseEvent".}
proc fQWizardPage_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_mouseDoubleClickEvent".}
proc fcQWizardPage_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_mouseDoubleClickEvent".}
proc fQWizardPage_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_mouseMoveEvent".}
proc fcQWizardPage_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_mouseMoveEvent".}
proc fQWizardPage_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_wheelEvent".}
proc fcQWizardPage_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_wheelEvent".}
proc fQWizardPage_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_keyPressEvent".}
proc fcQWizardPage_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_keyPressEvent".}
proc fQWizardPage_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_keyReleaseEvent".}
proc fcQWizardPage_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_keyReleaseEvent".}
proc fQWizardPage_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_focusInEvent".}
proc fcQWizardPage_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_focusInEvent".}
proc fQWizardPage_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_focusOutEvent".}
proc fcQWizardPage_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_focusOutEvent".}
proc fQWizardPage_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_enterEvent".}
proc fcQWizardPage_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_enterEvent".}
proc fQWizardPage_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_leaveEvent".}
proc fcQWizardPage_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_leaveEvent".}
proc fQWizardPage_virtualbase_paintEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_paintEvent".}
proc fcQWizardPage_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_paintEvent".}
proc fQWizardPage_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_moveEvent".}
proc fcQWizardPage_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_moveEvent".}
proc fQWizardPage_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_resizeEvent".}
proc fcQWizardPage_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_resizeEvent".}
proc fQWizardPage_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_closeEvent".}
proc fcQWizardPage_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_closeEvent".}
proc fQWizardPage_virtualbase_contextMenuEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_contextMenuEvent".}
proc fcQWizardPage_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_contextMenuEvent".}
proc fQWizardPage_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_tabletEvent".}
proc fcQWizardPage_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_tabletEvent".}
proc fQWizardPage_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_actionEvent".}
proc fcQWizardPage_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_actionEvent".}
proc fQWizardPage_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_dragEnterEvent".}
proc fcQWizardPage_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_dragEnterEvent".}
proc fQWizardPage_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_dragMoveEvent".}
proc fcQWizardPage_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_dragMoveEvent".}
proc fQWizardPage_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_dragLeaveEvent".}
proc fcQWizardPage_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_dragLeaveEvent".}
proc fQWizardPage_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_dropEvent".}
proc fcQWizardPage_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_dropEvent".}
proc fQWizardPage_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_showEvent".}
proc fcQWizardPage_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_showEvent".}
proc fQWizardPage_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_hideEvent".}
proc fcQWizardPage_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_hideEvent".}
proc fQWizardPage_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QWizardPage_virtualbase_nativeEvent".}
proc fcQWizardPage_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_nativeEvent".}
proc fQWizardPage_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QWizardPage_virtualbase_changeEvent".}
proc fcQWizardPage_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_changeEvent".}
proc fQWizardPage_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QWizardPage_virtualbase_metric".}
proc fcQWizardPage_override_virtual_metric(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_metric".}
proc fQWizardPage_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QWizardPage_virtualbase_initPainter".}
proc fcQWizardPage_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_initPainter".}
proc fQWizardPage_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QWizardPage_virtualbase_redirected".}
proc fcQWizardPage_override_virtual_redirected(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_redirected".}
proc fQWizardPage_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QWizardPage_virtualbase_sharedPainter".}
proc fcQWizardPage_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_sharedPainter".}
proc fQWizardPage_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QWizardPage_virtualbase_inputMethodEvent".}
proc fcQWizardPage_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_inputMethodEvent".}
proc fQWizardPage_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QWizardPage_virtualbase_inputMethodQuery".}
proc fcQWizardPage_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_inputMethodQuery".}
proc fQWizardPage_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QWizardPage_virtualbase_focusNextPrevChild".}
proc fcQWizardPage_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_focusNextPrevChild".}
proc fQWizardPage_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QWizardPage_virtualbase_eventFilter".}
proc fcQWizardPage_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_eventFilter".}
proc fQWizardPage_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_timerEvent".}
